# LazyDot

./: .gitignore  Cargo.toml  README.md  _lazydot  config.toml  install.sh
.github/workflows/: building_for_linux.yml  rust.yml
src/: args.rs  config.rs  create_toml_temp.rs  current_state.rs  dot_manager.rs  main.rs  utils.rs
src/tests/: README.md  helpers.rs  test_dot_manager.rs  test_utils.rs
src/tests/Data/fake_env/: .bashrc
src/tests/Data/fake_env/.config/app1/: app_config.toml  app_config1.toml
src/tests/Data/fake_env/.config/app2/: app_config.toml  app_config2.toml
