[package]
name = "lazydot"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.127", features = ["derive"] }
toml = "0.5.8"
clap = { version = "4.0.0-rc.1", features = ["derive"] }
clap_complete = "4.5.47"
dialoguer = "0.11.0"
tempfile = "3"
serial_test = "2.0"

[build-dependencies]
clap_complete = "4.5.47"

[profile.test]
test = ["--test-threads=1"]