[package]
name = "lazydot"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.127", features = ["derive"] }
toml = "0.8.20"
clap = { version = "4.0.0-rc.1", features = ["derive"] }
clap_complete = "4.5.47"
dialoguer = "0.11.0"
tempfile = "3"
serial_test = "3.2.0"
toml_edit = "0.22.24"
ansi_term = "0.12"

[build-dependencies]
clap_complete = "4.5.47"